--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,50 @@
- 
+ .App {
+     text-align: center;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .main-title {
+     color: grey;
+     font-family: Arial, Helvetica, sans-serif;
+ }
+
+ .container {
+     border-radius: 5px;
+     padding: 2%;
+     width: 300px;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
+ }
+
+ #new-todo {
+     width: 80%;
+     border: none;
+     border-bottom: solid 1px lightgray;
+     border-radius: 2px;
+     margin-bottom: 20px;
+ }
+
+ ::placeholder {
+     color: lightgray;
+     opacity: 1;
+     text-align: center;
+ }
+
+ .todo {
+     display: flex;
+     justify-content: space-between;
+     padding: 5px;
+     border-radius: 2px;
+     margin-bottom: 7px;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
+ }
+
+ .completed {
+     border-bottom: 3px solid rgb(102, 223, 138);
+ }
+
+ .pending {
+     border-bottom: 3px solid grey;
+ }
